revision Fix complete

--- a/app/partials/components/cards.njk
+++ b/app/partials/components/cards.njk
@@ -66,10 +66,10 @@
             <div class="author-block">
                 <div class="d-flex align-items-center">
                     <div class="author">
-                        <img src="./image/l-1/author.png" alt="author">
+                        <img src="{{obj.author}}" alt="author">
                     </div>
                     <div class="author-name">
-                        <h6 class="text-dark">Souja Flora</h6>
+                        <h6 class="heading-dark">{{obj.authorName}}</h6>
                     </div>
                 </div>
                 <div class="comment">
