--- a/app/partials/pages/landing-4/_blog.njk
+++ b/app/partials/pages/landing-4/_blog.njk
@@ -8,6 +8,8 @@
         date:"09 May, 21",
         img:"./image/l-4/blog-1.png",
         title:"Determing Marketing Budget Can be Frustrating.",
+                author:"./image/l-1/author-1.png",
+        authorName:"Jhon Smith",
         text:"Sed ut perspiciatis unde omnis is natus error sit voluptatem accusantium dolore mque laudantium totam"
         },
         {
@@ -15,6 +17,8 @@
         comment:"3 Comments",
         date:"09 May, 21",
         img:"./image/l-4/blog-2.png",
+                author:"./image/l-1/author-2.png",
+        authorName:"Souja Flora",
         title:"How to Win The Attention of New Clients: Tips & Tricks",
         text:"Sed ut perspiciatis unde omnis is natus error sit voluptatem accusantium dolore mque laudantium totam"
         },
@@ -23,6 +27,8 @@
         comment:"3 Comments",
         date:"09 May, 21",
         img:"./image/l-4/blog-3.png",
+                author:"./image/l-1/author-3.png",
+        authorName:"Jesica Lirona",
         title:"Business Agencies vs Advertising Agencies",
         text:"Sed ut perspiciatis unde omnis is natus error sit voluptatem accusantium dolore mque laudantium totam"
         }
@@ -57,6 +63,8 @@
                         img:item.img,
                         date:item.date,
                         text:item.text,
+                        author:item.author,
+                        authorName:item.authorName,
                         comment:item.comment,
                         title:item.title
                         })}}
