--- a/app/partials/pages/landing-5/_about.njk
+++ b/app/partials/pages/landing-5/_about.njk
@@ -10,7 +10,7 @@
                         <img src="./image/l-5/about.png" alt="about" class="w-100">
                     </div>
                 </div>
-                <div class="col-xl-6 col-lg-7 col-xs-10">
+                <div class="col-xl-6 col-lg-7">
                     <div class="about-section-05__content section-content-block">
                         <h6 class="subtitle mb-10 text-primary">About This Course</h6>
                         <h2 class="titel">Learn To Build Complete Design System In 8 Weeks</h2>
