--- a/app/partials/pages/landing-6/_content-02.njk
+++ b/app/partials/pages/landing-6/_content-02.njk
@@ -1,7 +1,7 @@
 {% macro render(args) %}
     <div class="content-section-08">
         <div class="container">
-            <div class="row align-items-center">
+            <div class="row align-items-center justify-content-center">
                 <div class="col-xl-5 col-lg-6 col-sm-8">
                     <div class="content-section-08__image-group">
                         <img src="./image/l-6/conten-2.png" alt="content" class="w-100">
