--- a/app/scss/pages/comingsoon/_comingsoon.scss
+++ b/app/scss/pages/comingsoon/_comingsoon.scss
@@ -32,4 +32,9 @@
             margin-bottom: 0;
         }
     }
+    .hero-newsletter-01{
+        .form-control{
+            background: var(--bs-white-lilac);
+        }
+    }
 }
