--- a/app/scss/pages/landing-3/_software-integrations.scss
+++ b/app/scss/pages/landing-3/_software-integrations.scss
@@ -15,6 +15,7 @@
     }
 }
 .software-slider{
+    box-shadow: 0px 15px 30px rgba(210, 217, 224, 0.2);
     .slick-list {
         margin: 0 -12px;
     }
