--- a/app/partials/components/Footer/_footer-03.njk
+++ b/app/partials/components/Footer/_footer-03.njk
@@ -2,13 +2,13 @@
     <div class="footer-section-03 bg-white-lilac {{args.ClassName}}">
         <div class="container">
             <div class="row">
-                <div class="col-xl-4 col-lg-4 col-sm-6  col-xs-6">
+                <div class="col-xxl-4 col-lg-12 col-sm-6  col-xs-6">
                     <div class="footer-section-03__wrapper">
                         <div class="logo">
                             <a href="#"><img src="./image/logo/logo-dark.png" alt="logo"></a>
                         </div>
                         <div class="text">
-                            <p class=" text-dark">In the fast-paced world of modern technology,
+                            <p class=" text-dark">In the fast-paced world of modern technology,<br class="d-none d-lg-block d-xxl-none">
                                 many leadership executives and organizations understand that building.</p>
                         </div>
                         <div class="footer-section-03__wrapper--button-group">
@@ -51,7 +51,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-2 col-lg-2 col-md-6 col-xs-6 col-sm-6">
+                <div class="col-xxl-2 col-lg-4 col-md-6 col-xs-6 col-sm-6">
                     <div class="footer-section-03__widget widget-01">
                         <h6 class="title">Company</h6>
                         <ul class="list-group list-unstyled">
@@ -64,7 +64,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-xl-3 col-lg-2 col-sm-6 col-xs-6">
+                <div class="col-xxl-3 col-lg-4 col-sm-6 col-xs-6">
                     <div class="footer-section-03__widget widget-02">
                         <h6 class="title">Get Help</h6>
                         <ul class="list-group list-unstyled">
@@ -77,7 +77,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-xl-3 col-lg-4 col-sm-6 order-lg-4 col-xs-6">
+                <div class="col-xxl-3 col-lg-4 col-sm-6 order-lg-4 col-xs-6">
                     <div class="footer-section-03__newsletter">
                         <h6>Newsletter</h6>
                         <p>Sign up and receive the latest tips via email.</p>
