--- a/app/partials/pages/landing-1/_skill.njk
+++ b/app/partials/pages/landing-1/_skill.njk
@@ -2,7 +2,20 @@
     <div class="skill-section-01 bg-white-lilac">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-6 col-md-10 col-sm-11 order-lg-2">
+                <div class="col-lg-6 col-md-10 col-sm-11" data-aos="fade-right" data-aos-duration="800" data-aos-delay="600">
+                    <div class="skill-section-01__content section-content-block mb-5 mb-lg-0">
+                        <h6 class="subtitle mb-10 text-primary">Skillset</h6>
+                        <h2 class="title">Creative and Professional Skills
+                        Experience on Few Area</h2>
+                        <p class=" text-dark pe-xl-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec feugiat fringilla lorem sed bibendum. Pellentesque venenatis, ipsum eget ullamcorper gravida in mattis ipsum ligula at tellus.</p>
+                        <a class="btn btn-primary" href="#">Get Any Project
+                            <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1 13L7 7L1 1" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-10 col-sm-11">
                     <div class="skill-bar-01">
                         <div class="skill-bar-01__item">
                             <div class="skill-name">
@@ -56,19 +69,6 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-10 col-sm-11 order-lg-1" data-aos="fade-right" data-aos-duration="800" data-aos-delay="600">
-                    <div class="skill-section-01__content section-content-block mt-5 mt-lg-0">
-                        <h6 class="subtitle mb-10 text-primary">Skillset</h6>
-                        <h2 class="title">Creative and Professional Skills
-                        Experience on Few Area</h2>
-                        <p class=" text-dark pe-xl-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec feugiat fringilla lorem sed bibendum. Pellentesque venenatis, ipsum eget ullamcorper gravida in mattis ipsum ligula at tellus.</p>
-                        <a class="btn btn-primary" href="#">Get Any Project
-                            <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 13L7 7L1 1" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>
-                        </a>
                     </div>
                 </div>
             </div>
