--- a/app/partials/pages/landing-3/_testimonial.njk
+++ b/app/partials/pages/landing-3/_testimonial.njk
@@ -11,13 +11,13 @@
                                 </div>
                                 <div class="testimonial-section-03__content--button">
                                     <div class="testimonial-slider--03__control-buttons">
-                                        <button class="button button--prev">
+                                        <button class="button button--prev bg-white">
                                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M19 12H5" stroke="#8492A7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                                                 <path d="M12 19L5 12L12 5" stroke="#8492A7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                                                 </svg>                                                
                                             </button>
-                                        <button class="button button--next">
+                                        <button class="button button--next bg-white">
                                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M5 12H19" stroke="#8492A7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                                                 <path d="M12 19L19 12L12 5" stroke="#8492A7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
