--- a/app/partials/pages/landing-5/_feature.njk
+++ b/app/partials/pages/landing-5/_feature.njk
@@ -37,9 +37,9 @@
                 <h2 class="title">Why This Course Suitable For You?</h2>
             </div>
         </div>
-        <div class="row card-row justify-content-center">
+        <div class="row card-row justify-content-center justify-content-md-start">
             {% for item in cardData%}
-                <div class="col-lg-4 col-sm-6 col-xl-3 single-slider" data-aos="fade-up" data-aos-delay="{{ 200 * item.id }}" data-aos-duration="800">
+                <div class="col-lg-4 col-sm-6 col-xl-3 col-xs-8 col-10 single-slider" data-aos="fade-up" data-aos-delay="{{ 200 * item.id }}" data-aos-duration="800">
                         {{Card.FeatureCard({
                             modifier:"feature-card--04",
                             img:item.img,
