--- a/app/partials/pages/landing-5/_hero.njk
+++ b/app/partials/pages/landing-5/_hero.njk
@@ -5,7 +5,19 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-xl-6 col-lg-6 col-md-10">
+                <div class="col-xl-5 offset-xl-1 col-lg-6 col-md-8 order-lg-2">
+                    <div class="hero-section-05__image-group">
+                        <img src="./image/l-5/hero.png" alt="hero" class="w-100">
+                        <div class="hero-section-05__image-group--video-btn">
+                            <a href="https://www.youtube.com/watch?v=TBQ_HkNZDCM" data-fancybox class="video-btn-two sonar-emitter">
+                                <svg width="18" height="22" viewBox="0 0 18 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M0 1.72149C0 0.540157 1.30219 -0.177567 2.30099 0.453257L16.992 9.73177C17.924 10.3204 17.924 11.6796 16.992 12.2682L2.30099 21.5467C1.30218 22.1776 0 21.4598 0 20.2785V1.72149Z" fill="white"/>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-10 order-lg-1">
                     <div class="page-title-block-two">
                         <h1 class="title text-white">The Complete App Design Course - UX, UI and Design Thinking</h1>
                         <p class="text-dark">Design High-Impact User Experiences. Research, design, and prototype effective, visually-driven websites and apps.</p>
@@ -17,18 +29,6 @@
                         </a>
                     </div>
 
-                </div>
-                <div class="col-xl-5 offset-xl-1 col-lg-6 col-md-8">
-                    <div class="hero-section-05__image-group">
-                        <img src="./image/l-5/hero.png" alt="hero" class="w-100">
-                        <div class="hero-section-05__image-group--video-btn">
-                            <a href="https://www.youtube.com/watch?v=TBQ_HkNZDCM" data-fancybox class="video-btn-two sonar-emitter">
-                                <svg width="18" height="22" viewBox="0 0 18 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M0 1.72149C0 0.540157 1.30219 -0.177567 2.30099 0.453257L16.992 9.73177C17.924 10.3204 17.924 11.6796 16.992 12.2682L2.30099 21.5467C1.30218 22.1776 0 21.4598 0 20.2785V1.72149Z" fill="white"/>
-                                </svg>
-                            </a>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
