--- a/app/partials/pages/landing-6/_content-03.njk
+++ b/app/partials/pages/landing-6/_content-03.njk
@@ -21,18 +21,18 @@
 ]%}
     <div class="content-section-09">
         <div class="container">
-            <div class="row align-items-center">
+            <div class="row align-items-center justify-content-center">
                 <div class="col-lg-6 col-sm-8 order-lg-2">
                     <div class="content-section-09__image-group">
                         <img src="./image/l-6/content-3.png" alt="content" class="w-100">
                     </div>
                 </div>
                 <div class="col-lg-6 col-sm-10 col-sx-11 order-lg-1">
-                    <div class="content-section-09__content section-content-block">
+                    <div class="content-section-09__content section-content-block text-center text-lg-start">
                         <h2 class="title">Easy to Sign Up & Can Make Transactions Yourself</h2>
                         <p class="text-dark">We design & build brand, campaigns & digital projects for business large & small with customer experiences.</p>
                         <div class="content-section-09__content--widget">
-                            <div class="row card-row">
+                            <div class="row card-row justify-content-center">
                                 {% for item in cardData%}
                                     <div class="col-xs-6 col-10" data-aos="fade-up" data-aos-delay="{{ 200 * item.id }}" data-aos-duration="800">
                                             {{Card.FeatureCard({
