--- a/app/partials/pages/landing-6/_testimonial.njk
+++ b/app/partials/pages/landing-6/_testimonial.njk
@@ -17,7 +17,7 @@
                                         <div class="col-lg-5 col-xl-6">
                                             <div class="card-img">
                                                 <figure class="mask-img">
-                                                    <img src="./image/l-6/t-1.png" alt="testimoni" class="mw-100">
+                                                    <img src="./image/l-2/skill-img.png" alt="testimoni" class="mw-100">
                                                 </figure>
                                             </div>
                                         </div>
@@ -39,7 +39,7 @@
                                         <div class="col-lg-6">
                                             <div class="card-img">
                                                 <figure class="mask-img">
-                                                    <img src="./image/l-6/t-2.png" alt="testimoni" class="mw-100">
+                                                    <img src="./image/l-1/client-2.png" alt="testimoni" class="mw-100">
                                                 </figure>
                                             </div>
                                         </div>
