--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -3,11 +3,20 @@
     background: var(--bs-black);
     padding: 60px 0;
     position: relative;
+    padding-top: 80px;
     @media (min-width:575px) {
         padding: 80px 0;
+        padding-top: 120px;
     }
     @media (min-width:992px) {
         padding: 130px 0;
+        padding-top: 185px;
+    }
+    @media (min-width:1200px) {
+        padding-top: 205px;
+    }
+    @media (min-width:1400px) {
+        padding-top: 245px;
     }
     &__shape{
         position: absolute;
@@ -139,7 +148,7 @@
     }
     &__widget-01{
         @media (max-width:768px) {
-        margin-top: 35px;
+        margin: 35px 0;
     }   
         @media (min-width:768px) {
         margin-bottom: 35px;
@@ -149,7 +158,7 @@
     }   
     }
     &__widget-02{
-        @media (max-width:768px) {
+        @media (max-width:575px) {
             margin: 35px 0;
         }
     @media (min-width:1200px) {
@@ -180,7 +189,7 @@
         @media (min-width:480px) {
             margin-bottom: 35px;
         }
-        @media (min-width:992px) {
+        @media (min-width:1400px) {
             margin-bottom: 0px;
         }
         .logo{
@@ -349,9 +358,6 @@
         @media (max-width:480px) {
             margin: 35px 0;
         }
-        @media (min-width:1200px) {
-           margin-left: 55px; 
-        }
         @media (min-width:1400px) {
            margin-left: 65px; 
         }
@@ -359,9 +365,6 @@
     .widget-02{
         @media (max-width:480px) {
             margin-bottom: 35px;
-        }
-        @media (min-width:1200px) {
-            margin-left: 65px;
         }
         @media (min-width:1400px) {
             margin-left: 88px;
