--- a/app/scss/pages/landing-1/_counter.scss
+++ b/app/scss/pages/landing-1/_counter.scss
@@ -13,7 +13,7 @@
                     position: absolute;
                     top: 50%;
                     content: "";
-                    right: 0;
+                    right: -13px;
                     transform: translateY(-50%);
                     height: 133px;
                     width: 1px;
