--- a/app/scss/pages/landing-2/_faq.scss
+++ b/app/scss/pages/landing-2/_faq.scss
@@ -60,6 +60,7 @@
            &::after{
                 background-image: url("data:image/svg+xml,%3Csvg width='14' height='14' viewBox='0 0 14 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M8 6V0H6V6H0V8H6V14H8V8H14V6H8Z' fill='%23222D39'/%3E%3C/svg%3E");
                 padding-right: 25px;
+                background-size: unset;
            }
        }
    } 
