--- a/app/scss/pages/landing-2/_skill.scss
+++ b/app/scss/pages/landing-2/_skill.scss
@@ -14,12 +14,20 @@
             left: 0;
             bottom: 0;
             height: 100%;
+            width: 46%;
+        }
+        @media (min-width:1400px) {
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            height: 100%;
             width: 50%;
         }
         img{
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: fill;
         }
         
     }
