--- a/app/scss/pages/landing-5/_hero.scss
+++ b/app/scss/pages/landing-5/_hero.scss
@@ -28,15 +28,18 @@
         }
     }
     .page-title-block-two{
-        margin-bottom: 30px;
+        margin-top: 30px;
         @media (min-width:992px) {
-            margin-bottom: 0;
+            margin-top: 0;
         }
         @media (min-width: 992px) and (max-width: 1400px) {
             padding-bottom: 60px;
         }
         .title{
             padding-bottom: 20px;
+            @media (max-width:420px) {
+                font-size: 32px;
+            }
             @media (min-width:575px) {
                 padding-bottom: 25px;
             }
