--- a/app/scss/pages/landing-6/_cta.scss
+++ b/app/scss/pages/landing-6/_cta.scss
@@ -2,11 +2,31 @@
     background-position: center center;
     background-repeat: no-repeat;
     padding: 100px 0;
+    position: relative;
+    z-index: 1;
+    &::before{
+    @media (max-width:1200px) {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255,0.5);
+            content: "";
+            z-index: -1;
+        }
+    }
     &__content{
+        @media (max-width:992px) {
+            text-align: center;
+        }
         &--button-group{
             display: flex;
             align-items: center;
             margin-top: 30px;
+            @media (max-width:992px) {
+                justify-content: center;
+            }
             @media (min-width:992px) {
                 margin-top: 50px;
             }
