--- a/app/partials/components/cards.njk
+++ b/app/partials/components/cards.njk
@@ -26,7 +26,7 @@
 {% macro BlogCardOne(obj) %}
     <div class="card-blog">
         <div class="card-image">
-            <img src="{{obj.img}}" alt="cad" class="w-100">
+            <img src="{{obj.img}}" alt="card" class="w-100">
         </div>
         <div class="card-body">
             <div class="date">
@@ -55,7 +55,7 @@
 {% macro BlogCardTwo(obj) %}
     <div class="card-blog card-blog--02">
         <div class="card-image">
-            <img src="{{obj.img}}" alt="cad" class="w-100">
+            <img src="{{obj.img}}" alt="card" class="w-100">
             <div class="meta">
                 <span class="text-dark">{{obj.date}}</span>
             </div>
