--- a/app/partials/pages/landing-1/_testimonial.njk
+++ b/app/partials/pages/landing-1/_testimonial.njk
@@ -38,9 +38,9 @@
                       </div>
                       <div class="testimonial-slider--01__control-buttons">
                           <button class="button button--prev"><img src="./image/l-1/prev.svg"
-                              class="d-block"/></button>
+                            alt="svg"  class="d-block"/></button>
                           <button class="button button--next"><img src="./image/l-1/next.svg"
-                              class="d-block"/></button>
+                            alt="svg"  class="d-block"/></button>
                       </div>
                   </div>
               </div>  
