--- a/app/partials/pages/landing-2/_portfolio.njk
+++ b/app/partials/pages/landing-2/_portfolio.njk
@@ -68,7 +68,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 grid-item portfolio-3 portfolio-2">
-                    <div href="#" class="portfolio-card portfolio-card--02">
+                    <div class="portfolio-card portfolio-card--02">
                         <div class="portfolio-img">
                         <a href="./image/l-2/project-3.png" data-fancybox>
                             <img src="./image/l-2/project-3.png" alt="portfolio" class="w-100">
