--- a/app/partials/pages/landing-5/_hero.njk
+++ b/app/partials/pages/landing-5/_hero.njk
@@ -1,7 +1,7 @@
 {% macro render(args) %}
     <div class="hero-section-05">
         <div class="hero-section-05__rectangle d-none d-lg-block">
-            <img src="./image/l-5/rectangle.png" alt="rectangle" width="w-100">
+            <img src="./image/l-5/rectangle.png" alt="rectangle" class="w-100">
         </div>
         <div class="container">
             <div class="row">
