--- a/app/scss/pages/landing-5/_content-02.scss
+++ b/app/scss/pages/landing-5/_content-02.scss
@@ -60,7 +60,7 @@
                 @media (min-width:480px) {
                     margin-left: 18px;
                 }
-                span{
+                .text{
                     font-size: 16px;
                     line-height: 1.222222222222222;
                     color: var(--bs-black);
