--- a/app/partials/pages/blog/_content.njk
+++ b/app/partials/pages/blog/_content.njk
@@ -6,48 +6,48 @@
         {
         id:1,
         img:"./image/blog/blog-1.png",
-        date:"<img src='./image/svg/calendar.svg'/> March 18, 2021",
-        time:"<img src='./image/svg/clock.svg'/> 3 min read",
+        date:"<img alt='calendar' src='./image/svg/calendar.svg'/> March 18, 2021",
+        time:"<img alt='clock' src='./image/svg/clock.svg'/> 3 min read",
         title:"3 Interviewing Tips That Can Help You Find Right Candidate",
         text:"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi amet, lorem tristique In laoreet morbi morbi lorem maecenas."
         },
         {
         id:2,
         img:"./image/blog/blog-2.png",
-        date:"<img src='./image/svg/calendar.svg'/> March 18, 2021",
-        time:"<img src='./image/svg/clock.svg'/> 3 min read",
+        date:"<img alt='calendar' src='./image/svg/calendar.svg'/> March 18, 2021",
+        time:"<img alt='clock' src='./image/svg/clock.svg'/> 3 min read",
         title:"How to Easily Manage with Designer as a Web Based Developer",
         text:"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi amet, lorem tristique In laoreet morbi morbi lorem maecenas."
         },
         {
         id:3,
         img:"./image/blog/blog-3.png",
-        date:"<img src='./image/svg/calendar.svg'/> March 18, 2021",
-        time:"<img src='./image/svg/clock.svg'/> 3 min read",
+        date:"<img alt='calendar' src='./image/svg/calendar.svg'/> March 18, 2021",
+        time:"<img alt='clock' src='./image/svg/clock.svg'/> 3 min read",
         title:"Top 5 Fastest Growing Digital Agency Marketing Jobs Today",
         text:"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi amet, lorem tristique In laoreet morbi morbi lorem maecenas."
         },
         {
         id:4,
         img:"./image/blog/blog-4.png",
-        date:"<img src='./image/svg/calendar.svg'/> March 18, 2021",
-        time:"<img src='./image/svg/clock.svg' /> 3 min read",
+        date:"<img alt='calendar' src='./image/svg/calendar.svg'/> March 18, 2021",
+        time:"<img alt='clock' src='./image/svg/clock.svg' /> 3 min read",
         title:"8 Innovative Design Ideas to Make Your Design Superb",
         text:"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi amet, lorem tristique In laoreet morbi morbi lorem maecenas."
         },
         {
         id:5,
         img:"./image/blog/blog-5.png",
-        date:"<img src='./image/svg/calendar.svg'/> March 18, 2021",
-        time:"<img src='./image/svg/clock.svg'/> 3 min read",
+        date:"<img alt='calendar' src='./image/svg/calendar.svg'/> March 18, 2021",
+        time:"<img alt='calendar' src='./image/svg/clock.svg'/> 3 min read",
         title:"How to Buy Stocks: Step-by-Step Guide for Beginner Investors",
         text:"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi amet, lorem tristique In laoreet morbi morbi lorem maecenas."
         },
         {
         id:6,
         img:"./image/blog/blog-6.png",
-        date:"<img src='./image/svg/calendar.svg'/> March 18, 2021",
-        time:"<img src='./image/svg/clock.svg'/> 3 min read",
+        date:"<img src='./image/svg/calendar.svg' alt='calendar'/> March 18, 2021",
+        time:"<img src='./image/svg/clock.svg' alt='calendar'/> 3 min read",
         title:"6 Great Productivity Apps You Can Download for Free This Week",
         text:"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi amet, lorem tristique In laoreet morbi morbi lorem maecenas."
         }
@@ -57,13 +57,13 @@
     {
     id:1,
     img:"./image/blog/post-1.png",
-    date:"<img src='./image/svg/calendar-2.svg'/> March 18, 2021",
+    date:"<img src='./image/svg/calendar-2.svg' alt='calendar'/> March 18, 2021",
     title:"5 Tips to Be Prepared for Digital Marketing Trends"
     },
     {
     id:2,
     img:"./image/blog/post-2.png",
-    date:"<img src='./image/svg/calendar-2.svg'/> March 18, 2021",
+    date:"<img src='./image/svg/calendar-2.svg' alt='calendar'/> March 18, 2021",
     title:"How to Start Your Career As a UI/UX Designer"
     }
 
