--- a/app/partials/pages/landing-2/_faq.njk
+++ b/app/partials/pages/landing-2/_faq.njk
@@ -22,7 +22,7 @@
                             <div class="accordion-item">
                               <h2 class="accordion-header" id="headingOne">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                <p>Professional & <br class="d-xs-none"> Experienced Team <br class="d-xs-none"> Member</p>
+                                <span>Professional & <br class="d-xs-none"> Experienced Team <br class="d-xs-none"> Member</span>
                                 </button>
                               </h2>
                               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
