--- a/app/partials/pages/landing-2/_testimonial.njk
+++ b/app/partials/pages/landing-2/_testimonial.njk
@@ -44,7 +44,7 @@
                           </div>
                           <div class="testimonial-card-02__client">
                               <div class="avatar">
-                                  <img src="./image/l-2/avatar-1.png" alt="client" width="w-100">
+                                  <img src="./image/l-2/avatar-1.png" alt="client" class="w-100">
                               </div>
                               <div class="client-info">
                                   <h6>Jhon Smith</h6>
@@ -68,7 +68,7 @@
                           </div>
                           <div class="testimonial-card-02__client">
                               <div class="avatar">
-                                  <img src="./image/l-2/avatar-2.png" alt="client" width="w-100">
+                                  <img src="./image/l-2/avatar-2.png" alt="client" class="w-100">
                               </div>
                               <div class="client-info">
                                   <h6>Md Shamim Hossain</h6>
@@ -92,7 +92,7 @@
                           </div>
                           <div class="testimonial-card-02__client">
                               <div class="avatar">
-                                  <img src="./image/l-2/avatar-3.png" alt="client" width="w-100">
+                                  <img src="./image/l-2/avatar-3.png" alt="client" class="w-100">
                               </div>
                               <div class="client-info">
                                   <h6>Jesica Lirona</h6>
@@ -116,7 +116,7 @@
                           </div>
                           <div class="testimonial-card-02__client">
                               <div class="avatar">
-                                  <img src="./image/l-2/avatar-2.png" alt="client" width="w-100">
+                                  <img src="./image/l-2/avatar-2.png" alt="client" class="w-100">
                               </div>
                               <div class="client-info">
                                   <h6>Md Shamim Hossain</h6>
