--- a/app/partials/pages/landing-4/_hero.njk
+++ b/app/partials/pages/landing-4/_hero.njk
@@ -6,7 +6,7 @@
                     <div class="hero-section-04__image-group">
                         <img src="./image/l-4/hero.png" alt="hero-img" class="w-100">
                         <div class="hero-section-04__image-group--shape">
-                            <img src="./image/l-4/hero-shpe.png" alt="hero-shape" class="w-100" class="w-100">
+                            <img src="./image/l-4/hero-shpe.png" alt="hero-shape" class="w-100">
                         </div>
                     </div>
                 </div>
