--- a/app/partials/pages/landing-4/_testimonial-02.njk
+++ b/app/partials/pages/landing-4/_testimonial-02.njk
@@ -62,7 +62,7 @@
                                     <p class="heading-dark text">“ There are many variation of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of lorem Ipsum  ”</p>
                                     <div class="author-block">
                                         <div class="avatar">
-                                            <img src="./image/l-4/user-1.png" alt="user" class="avatar" class="w-100">
+                                            <img src="./image/l-4/user-1.png" alt="user" class="w-100">
                                         </div>
                                         <div class="author-info">
                                             <h6>Jesica Lirona</h6>
@@ -103,7 +103,7 @@
                                     <p class="heading-dark text">“ There are many variation of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of lorem Ipsum ”</p>
                                     <div class="author-block">
                                         <div class="avatar">
-                                            <img src="./image/l-4/user-3.png" alt="user" class="avatar" class="w-100">
+                                            <img src="./image/l-4/user-3.png" alt="user" class="w-100">
                                         </div>
                                         <div class="author-info">
                                             <h6>Emma Simian</h6>
@@ -144,7 +144,7 @@
                                     <p class="heading-dark text">“ There are many variation of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of lorem Ipsum ”</p>
                                     <div class="author-block">
                                         <div class="avatar">
-                                            <img src="./image/l-4/user-2.png" alt="user" class="avatar" class="w-100">
+                                            <img src="./image/l-4/user-1.png" alt="user" class="w-100">
                                         </div>
                                         <div class="author-info">
                                             <h6>Olivia Liyan</h6>
