--- a/app/partials/pages/landing-5/_content-02.njk
+++ b/app/partials/pages/landing-5/_content-02.njk
@@ -35,10 +35,10 @@
                             <div class="accordion-item">
                               <h2 class="accordion-header" id="headingOne">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    <div class="content">
-                                        <span class="d-block">Welcome and Introduction</span>
-                                        <span class="d-block">7 Lecture</span>
-                                    </div>
+                                    <span class="content">
+                                        <span class="text d-block">Welcome and Introduction</span>
+                                        <span class="text d-block">7 Lecture</span>
+                                    </span>
                                 </button>
                               </h2>
                               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
@@ -153,10 +153,10 @@
                             <div class="accordion-item">
                               <h2 class="accordion-header" id="headingTwo">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    <div class="content">
-                                        <span class="d-block">Color Theory</span>
-                                        <span class="d-block">5 Lecture</span>
-                                    </div>
+                                    <span class="content">
+                                        <span class="text d-block">Color Theory</span>
+                                        <span class="text d-block">5 Lecture</span>
+                                    </span>
                                 </button>
                               </h2>
                               <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
@@ -271,10 +271,10 @@
                             <div class="accordion-item">
                               <h2 class="accordion-header" id="headingThree">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    <div class="content">
-                                        <span class="d-block">Typography & Spacing</span>
-                                        <span class="d-block">5 Lecture</span>
-                                    </div>
+                                    <span class="content">
+                                        <span class="text d-block">Typography & Spacing</span>
+                                        <span class="text d-block">5 Lecture</span>
+                                    </span>
                                 </button>
                               </h2>
                               <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
@@ -389,10 +389,10 @@
                             <div class="accordion-item">
                               <h2 class="accordion-header" id="headingFour">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                                    <div class="content">
-                                        <span class="d-block">User Interface Design for Mobile</span>
-                                        <span class="d-block">5 Lecture</span>
-                                    </div>
+                                    <span class="content">
+                                        <span class="text d-block">User Interface Design for Mobile</span>
+                                        <span class="text d-block">5 Lecture</span>
+                                    </span>
                                 </button>
                               </h2>
                               <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
@@ -507,10 +507,10 @@
                             <div class="accordion-item">
                               <h2 class="accordion-header" id="headingFive">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                                    <div class="content">
-                                        <span class="d-block">User Interface Design for Website</span>
-                                        <span class="d-block">5 Lecture</span>
-                                    </div>
+                                    <span class="content">
+                                        <span class="text d-block">User Interface Design for Website</span>
+                                        <span class="text d-block">5 Lecture</span>
+                                    </span>
                                 </button>
                               </h2>
                               <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
@@ -625,10 +625,10 @@
                             <div class="accordion-item">
                               <h2 class="accordion-header" id="headingSix">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                                    <div class="content">
-                                        <span class="d-block">Resources</span>
-                                        <span class="d-block">5 Lecture</span>
-                                    </div>
+                                    <span class="content">
+                                        <span class="text d-block">Resources</span>
+                                        <span class="text d-block">5 Lecture</span>
+                                    </span>
                                 </button>
                               </h2>
                               <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
