--- a/app/partials/pages/landing-5/_price.njk
+++ b/app/partials/pages/landing-5/_price.njk
@@ -14,7 +14,7 @@
                             <tr>
                                 <th class="w-40">
                                     <div class="big-text text-start">
-                                        <h6>Benifits</h6>
+                                        <span>Benifits</span>
                                     </div>
                                 </th>
                                 <th class=" price-head">
