--- a/app/scss/pages/landing-5/_price.scss
+++ b/app/scss/pages/landing-5/_price.scss
@@ -24,7 +24,7 @@
                   padding: 0;
                   padding-bottom: 30px;
                   .big-text{
-                      h6{
+                      span{
                           color: var(--bs-black);
                         font-weight: 600;
                         font-size: 24px;
