w3 error fix landing 6 tesimonial section

--- a/app/partials/pages/landing-4/_testimonial-02.njk
+++ b/app/partials/pages/landing-4/_testimonial-02.njk
@@ -185,7 +185,7 @@
                                     <p class="heading-dark text">“ There are many variation of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of lorem Ipsum ”</p>
                                     <div class="author-block">
                                         <div class="avatar">
-                                            <img src="./image/l-4/user-4.png" alt="user" class="avatar" class="w-100">
+                                            <img src="./image/l-4/user-4.png" alt="user" class="w-100">
                                         </div>
                                         <div class="author-info">
                                             <h6>Leaf Sinelly</h6>
