preview page header content change

--- a/app/partials/pages/preview/_features.njk
+++ b/app/partials/pages/preview/_features.njk
@@ -61,7 +61,7 @@ User interface website."
 
 
 ]%}
-<div class="preview-feature-section overflow-hidden bg-white-lilac">
+<div class="preview-feature-section overflow-hidden bg-white-lilac" id="featuresTheme">
     <div class="container">
         <div class="row align-items-center justify-content-center">
             <div class="section-title-block text-center">
