--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -27,7 +27,7 @@
     position: fixed !important;
     bottom: 20px !important;
     right: 20px !important;
-    z-index: 9999999999999999 !important;
+    z-index: 99999 !important;
   .purchase-btn{
     box-shadow: 0px 0px 3px 0px white !important;
     background-color: rgb(23, 23, 23) !important;
