preview page animataion fix and forgot lik fix

--- a/app/partials/pages/reset-password/_content.njk
+++ b/app/partials/pages/reset-password/_content.njk
@@ -28,7 +28,7 @@
                             </div>
                             <div class="col-12">
                                 <div class="form-texts form-texts-two">
-                                    <p class="heading-dark">Remember the password? <a class=" text-primary" href="signin.html">Sign in</a></p>
+                                    <p class="heading-dark">Remember the password? <a class=" text-primary" href="sign-in.html">Sign in</a></p>
                                 </div>
                             </div>
                         </form>
