--- a/app/partials/pages/landing-5/_content-02.njk
+++ b/app/partials/pages/landing-5/_content-02.njk
@@ -14,7 +14,7 @@
                             <div class="course-card__top">
                                 <img src="./image/l-5/course-img.png" alt="course-img" class="w-100">
                                 <div class="video-btn">
-                                    <a href="https://www.youtube.com/watch?v=TBQ_HkNZDCM" data-fancybox class="video-btn-two">
+                                    <a href="https://www.youtube.com/watch?v=TBQ_HkNZDCM" data-fancybox class="video-btn-two sonar-emitter">
                                         <svg width="18" height="22" viewBox="0 0 18 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M0 1.72149C0 0.540157 1.30219 -0.177567 2.30099 0.453257L16.992 9.73177C17.924 10.3204 17.924 11.6796 16.992 12.2682L2.30099 21.5467C1.30218 22.1776 0 21.4598 0 20.2785V1.72149Z" fill="white"/>
                                         </svg>
