feat: docs updated

--- a/app/partials/pages/preview/_features.njk
+++ b/app/partials/pages/preview/_features.njk
@@ -6,57 +6,49 @@
         id:1,
         img:"./image/preview/icon-1.png",
         title:"Bootstrap 5",
-        text:"Best features with the latest design technologies to make a standard 
-User interface website."
+        text:"Take advantages of world's most popular ui framework. Bestkit is built with Bootstrap 5"
         },
         {
         id:2,
         img:"./image/preview/icon-2.png",
         title:"Free Google Font",
-        text:"Best features with the latest design technologies to make a standard 
-User interface website."
+        text:"We are using Google font for this project, which is free and 1000 more to chose from."
         },
         {
         id:3,
         img:"./image/preview/icon-3.png",
-        title:"Contact Form 7",
-        text:"Best features with the latest design technologies to make a standard 
-User interface website."
+        title:"Great Support 24/7",
+        text:"Our developer is ready to provide you all the support you need. Need help? contact us"
         },
         {
         id:4,
         img:"./image/preview/icon-4.png",
-        title:"Mailchimp",
-        text:"Best features with the latest design technologies to make a standard 
-User interface website."
+        title:"Easily Customizable Files",
+        text:"You can easily edit and customize all the feature of this template. Need more? contact us"
         },
         {
         id:5,
         img:"./image/preview/icon-1.png",
-        title:"Mailchimp",
-        text:"Best features with the latest design technologies to make a standard 
-User interface website."
+        title:"W3c Validated Code",
+        text:"We followed W3c standard for all the codes, you don't have to worry about quality. "
         },
         {
         id:6,
         img:"./image/preview/icon-2.png",
-        title:"Contact Form 7",
-        text:"Best features with the latest design technologies to make a standard 
-User interface website."
+        title:"Well Organized",
+        text:"Files & Codes are well organized. Anyone can play around with some basic knowledge."
         },
         {
         id:7,
         img:"./image/preview/icon-3.png",
-        title:"Mailchimp",
-        text:"Best features with the latest design technologies to make a standard 
-User interface website."
+        title:"Well Documented Code",
+        text:"All the code portion is listed and well commented. Change anything, anywhere however you like"
         },
         {
         id:8,
         img:"./image/preview/icon-4.png",
-        title:"Contact Form 7",
-        text:"Best features with the latest design technologies to make a standard 
-User interface website."
+        title:"Life time free Updates",
+        text:"Once you buy this template, you will be able to receive updates for lifetime"
         }
 
 
