--- a/app/partials/pages/preview/_counter.njk
+++ b/app/partials/pages/preview/_counter.njk
@@ -8,10 +8,28 @@
             <div class="preview-counter-section__wrapper">
                 <div class="sigle-counter-items">
                     <div class="card-icon">
+                        <img src="./image/preview/c-4.svg" alt="icon" class="make-it-inline">
+                    </div>
+                    <div class="card-content">
+                        <h6 class=" title"><span class="counter">160 +</span>+</h6>
+                        <p class="text">Components & Features</p>
+                    </div>
+                </div>
+                <div class="sigle-counter-items">
+                    <div class="card-icon">
+                        <img src="./image/preview/c-3.svg" alt="icon" class="make-it-inline">
+                    </div>
+                    <div class="card-content">
+                        <h6 class=" title"><span class="counter">21</span>+</h6>
+                        <p class="text">Pre-built Template</p>
+                    </div>
+                </div>
+                <div class="sigle-counter-items">
+                    <div class="card-icon">
                         <img src="./image/preview/c-1.svg" alt="icon" class="make-it-inline">
                     </div>
                     <div class="card-content">
-                        <h6 class=" title"><span class="counter">97</span>%</h6>
+                        <h6 class=" title"><span class="counter">350</span>%</h6>
                         <p class="text">Happy Customers</p>
                     </div>
                 </div>
@@ -22,24 +40,6 @@
                     <div class="card-content">
                         <h6 class=" title"><span class="counter">24</span>x<span class="counter">7</span></h6>
                         <p class="text">Customer support</p>
-                    </div>
-                </div>
-                <div class="sigle-counter-items">
-                    <div class="card-icon">
-                        <img src="./image/preview/c-3.svg" alt="icon" class="make-it-inline">
-                    </div>
-                    <div class="card-content">
-                        <h6 class=" title"><span class="counter">123</span>+</h6>
-                        <p class="text">Pre-built Template</p>
-                    </div>
-                </div>
-                <div class="sigle-counter-items">
-                    <div class="card-icon">
-                        <img src="./image/preview/c-4.svg" alt="icon" class="make-it-inline">
-                    </div>
-                    <div class="card-content">
-                        <h6 class=" title"><span class="counter">673</span>+</h6>
-                        <p class="text">Components & Features</p>
                     </div>
                 </div>
             </div>
