fix: feature section logo add

--- a/app/partials/pages/preview/_counter.njk
+++ b/app/partials/pages/preview/_counter.njk
@@ -11,7 +11,7 @@
                         <img src="./image/preview/c-4.svg" alt="icon" class="make-it-inline">
                     </div>
                     <div class="card-content">
-                        <h6 class=" title"><span class="counter">160 +</span>+</h6>
+                        <h6 class=" title"><span class="counter">160</span>+</h6>
                         <p class="text">Components & Features</p>
                     </div>
                 </div>
