--- a/app/partials/pages/preview/_hero.njk
+++ b/app/partials/pages/preview/_hero.njk
@@ -8,7 +8,7 @@
                         <h3 class="short-title text-white">Bootstrap 5 Multipurpose HTML Template</h3>
                         <p class="text text-white">Bestkit helps you to save time and create a fully functioning website with over
                             100+ flexible blocks and 6+ pre-built homepage & 15+ Inner pages.</p>
-                        <a class="btn" href="personal-portfolio.html">
+                        <a class="btn" href="#pagePreview">
                             View Demo Now
                             <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1 13L7 7L1 1" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
