fix: copyright text fix and testimonil content fix

--- a/app/partials/components/Footer/_footer-03.njk
+++ b/app/partials/components/Footer/_footer-03.njk
@@ -123,7 +123,7 @@
                         <li class="list-item"><a href="https://twitter.com/"><i class="fab fa-twitter"></i></a></li>
                     </ul>
                     <div class="copyright-block__content">
-                        <p class="text-dark">© 2021 Zakirsoft. Powered by Bestkit</p>
+                        <p class="text-dark">© 2022 BestKit. Powered by <a target="_blank" href="https://templatecookie.com/">Templatecookie</a></p>
                     </div>
                 </div>
             </div>
