--- a/app/partials/components/Footer/_footer-04.njk
+++ b/app/partials/components/Footer/_footer-04.njk
@@ -86,7 +86,7 @@
             <div class="row">
                 <div class="copyright-block__wrapper justify-content-center">
                     <div class="copyright-block__content">
-                        <p class="text-dark">© 2021 Zakirsoft. Powered by Bestkit</p>
+                        <p class="text-dark">© 2022 BestKit. Powered by <a target="_blank" href="https://templatecookie.com/">Templatecookie</a></p>
                     </div>
                 </div>
             </div>
