--- a/app/partials/pages/landing-5/_testimonial.njk
+++ b/app/partials/pages/landing-5/_testimonial.njk
@@ -11,7 +11,7 @@
                         <div class="testimonial-slider--06">
                             <div class="slide">
                                 <div class="testimonial-card-06">
-                                    <p class="text-dark">“ I expected to learn more than what was actually taught. I knew I wouldn't become a designer, but at least wanted to grasp some of the basics. The main topic (App design) was the poorest one: the instructor only mentioned pretty basic stuff about the between Android and iOS. ”</p>
+                                    <p class="text-dark">“ I expected to learn more than what was actually taught. I knew I wouldn't become a designer, but at least wanted to grasp some of the basics. The main topic (App design) was the poorest one: the instructor only mentioned ”</p>
                                     <div class="author-info">
                                         <h6>Michle Demetriou</h6>
                                         <p>CX & UX Consultant</p>
@@ -20,7 +20,7 @@
                             </div>
                             <div class="slide">
                                 <div class="testimonial-card-06">
-                                    <p class="text-dark">“ I expected to learn more than what was actually taught. I knew I wouldn't become a designer, but at least wanted to grasp some of the basics. The main topic (App design) was the poorest one: the instructor only mentioned pretty basic stuff about the between Android and iOS. ”</p>
+                                    <p class="text-dark">“ I expected to learn more than what was actually taught. I knew I wouldn't become a designer, but at least wanted. The main topic (App design) was the poorest one: the instructor only mentioned pretty basic stuff about the between Android and iOS. ”</p>
                                     <div class="author-info">
                                         <h6>Jesica Lirona</h6>
                                         <p>Web Developer</p>
