--- a/app/partials/pages/blog-details/_content.njk
+++ b/app/partials/pages/blog-details/_content.njk
@@ -119,7 +119,7 @@
                                 {% for item in postCardData%}
                                 <div class="single-post" data-aos="fade-up" data-aos-delay="{{ 150 * item.id }}"
                                 data-aos-duration="800">
-                                    <a href="#" class="d-block">
+                                    <a href="blog-details.html" class="d-block">
                                         {{Card.PostCard({
                                             img:item.img,
                                             title:item.title,
