--- a/app/partials/pages/blog/_content.njk
+++ b/app/partials/pages/blog/_content.njk
@@ -119,7 +119,7 @@
                                 {% for item in postCardData%}
                                 <div class="single-post" data-aos="fade-up" data-aos-delay="{{ 150 * item.id }}"
                                 data-aos-duration="800">
-                                    <a href="#" class="d-block">
+                                    <a href="blog-details.html" class="d-block">
                                         {{Card.PostCard({
                                             img:item.img,
                                             title:item.title,
@@ -156,7 +156,7 @@
                     </div>
                 </div>
                 <div class="col-lg-8 order-lg-1">
-                    <div class="blog-content-area__card">
+                    <div class="blog-content-area__card overflow-hidden">
                         <div class="row card-row">
                             {% for item in cardData%}
                             <div class="col-12" data-aos="fade-up" data-aos-delay="{{ 150 * item.id }}" data-aos-duration="800">
