--- a/app/partials/pages/careers/_cta.njk
+++ b/app/partials/pages/careers/_cta.njk
@@ -4,7 +4,7 @@
             <div class="cta-section-title text-center">
                 <h2 class="title">Can't Find The Right Position?</h2>
                 <p class="text text-dark">Lorem ipsum dolor sit amet consectetur adipisc elit <br class="d-none d-xs-block"> viverra dignissim pellentesque in ac.</p>
-                <a class="btn btn-1 btn-primary" href="#">
+                <a class="btn btn-1 btn-primary" href="contact.html">
                     Contact Us
                     <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M1 13L7 7L1 1" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
