--- a/app/partials/pages/landing-1/_qualification.njk
+++ b/app/partials/pages/landing-1/_qualification.njk
@@ -33,7 +33,7 @@
                                 <div class="inner-circle"></div>
                             </div>
                             <div class="widget-content">
-                                <h3 class="title heading-dark">Rajshahi University <span class="date text-dark">( 2017-2021 )</span></h3>
+                                <h3 class="title heading-dark">Dhaka University <span class="date text-dark">( 2017-2021 )</span></h3>
                                 <p class="text-dark">Lorem ipsum dolor sit amese adipiscing elit. Donec feugiated a fringilla sed bibendum.</p>
                                 <span class="widget-designations text-primary">Programming</span>
                             </div>
@@ -51,7 +51,7 @@
                                 <div class="inner-circle"></div>
                             </div>
                             <div class="widget-content">
-                                <h3 class="title heading-dark">Code Astrology <span class="date text-dark">( 2011-2012 )</span></h3>
+                                <h3 class="title heading-dark">Codeshiskhi <span class="date text-dark">( 2011-2012 )</span></h3>
                                 <p class="text-dark">Lorem ipsum dolor sit amese adipiscing elit. Donec feugiated a fringilla sed bibendum.</p>
                                 <span class="widget-designations text-primary">Internship</span>
                             </div>
@@ -61,7 +61,7 @@
                                 <div class="inner-circle"></div>
                             </div>
                             <div class="widget-content">
-                                <h3 class="title heading-dark">Zakir Soft <span class="date text-dark">( 2011-2012 )</span></h3>
+                                <h3 class="title heading-dark">Zakirsoft <span class="date text-dark">( 2011-2012 )</span></h3>
                                 <p class="text-dark">Lorem ipsum dolor sit amese adipiscing elit. Donec feugiated a fringilla sed bibendum.</p>
                                 <span class="widget-designations text-primary">UI/UX Designer</span>
                             </div>
@@ -71,7 +71,7 @@
                                 <div class="inner-circle"></div>
                             </div>
                             <div class="widget-content">
-                                <h3 class="title heading-dark">DevignEdge <span class="date text-dark">( 2011-2012 )</span></h3>
+                                <h3 class="title heading-dark">Templatecookie <span class="date text-dark">( 2011-2012 )</span></h3>
                                 <p class="text-dark">Lorem ipsum dolor sit amese adipiscing elit. Donec feugiated a fringilla sed bibendum.</p>
                                 <span class="widget-designations text-primary">Product Designer</span>
                             </div>
