--- a/app/partials/pages/landing-2/_testimonial.njk
+++ b/app/partials/pages/landing-2/_testimonial.njk
@@ -71,7 +71,7 @@
                                   <img src="./image/l-2/avatar-2.png" alt="client" class="w-100">
                               </div>
                               <div class="client-info">
-                                  <h6>Md Shamim Hossain</h6>
+                                  <h6>Michle D. Collins</h6>
                                   <p>UI/UX Designer</p>
                               </div>
                           </div>
@@ -119,7 +119,7 @@
                                   <img src="./image/l-2/avatar-2.png" alt="client" class="w-100">
                               </div>
                               <div class="client-info">
-                                  <h6>Md Shamim Hossain</h6>
+                                  <h6>Michle D. Collins</h6>
                                   <p>UI/UX Designer</p>
                               </div>
                           </div>
