purchase btn trget blank add

--- a/app/partials/pages/preview/_header.njk
+++ b/app/partials/pages/preview/_header.njk
@@ -14,7 +14,7 @@
             </a>
           </div>
           <div class="header-button header-btn site-header__btns--01">
-            <a class="btn btn-primary text-white svg-white w-210" href="https://1.envato.market/5bqQG9">
+            <a class="btn btn-primary text-white svg-white w-210" target="_blank" href="https://1.envato.market/5bqQG9">
               Purchase Now <img src='./image/svg/arrow.svg' class='make-it-inline' alt='arrow'>
             </a>
           </div>
